--- a/src/card.css
+++ b/src/card.css
@@ -1,9 +1,3 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
 .bottom-border{
     border-bottom: solid 1px #d7d7d7;
     width: 50%;
@@ -62,16 +56,10 @@
     padding: 10px;
 }
 
-.coin-percent{
-    margin-top:5px;
-}
-
-.coin-volume{
-    margin-top: 5px;
-}
-
+.coin-percent,
+.coin-volume,
 .coin-marketcap{
-    margin-top: 5px;
+    margin-top:5px;
 }
 
 .red{
