added links to social media icons and fixed the header layout

--- a/src/Header.css
+++ b/src/Header.css
@@ -2,13 +2,31 @@
     display: flex;
     background-color: rgb(48, 48, 48);
     min-height: 100px;
+    justify-content: space-around;
 }
 
+.socials-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+    flex-basis: 10%
+}
+
+.socials-container a{
+    color: white;
+}
 .title-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .app-title, p{
     color:white
+}
+
+.empty-container{
+    flex-basis: 10%;
 }
